--- a/index.html
+++ b/index.html
@@ -17,6 +17,26 @@
  
 	<b><p id="Intro">Welcome To My Page, Hope You Find It Interesting</p></b>
 </div>
+	
+
+					<!-- Begin Mailchimp Signup Form -->
+					<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+					<style type="text/css">
+						#mc_embed_signup{clear:center; font:14px Helvetica,Arial,sans-serif; }
+						/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+						   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+					</style>
+					<div id="mc_embed_signup">
+					<form action="https://artox.us20.list-manage.com/subscribe/post?u=b130986d76f28872427a460e9&amp;id=9b3d96951d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+					    <div id="mc_embed_signup_scroll">
+						<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+					        <div class="clear"><input class="btn btn-primary" type="submit" value="Enter the Vault" id="mc-embedded-subscribe" class="button"></div>
+					    </div>
+					</form>
+					</div>
+
+					<!--End mc_embed_signup-->
+
 <div id="btn">
 	
 	<button  type="button" class="btn btn-primary">
