--- a/bg_change.html
+++ b/bg_change.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Gradient Background</title>
-	<link rel="stylesheet" type="text/css" href="https://github.com/TSharma-84/TSharma-84.github.io/blob/master/bg_style.css">
+	<link rel="stylesheet" type="text/css" href="/master/bg_style.css">
 </head>
 <body id="bod">
 	<h1 id="h1">BACKGROUND GENERATOR</h1>
