--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	
 </head>
 <div class="col col-sm-9 col-md-12 col-lg-12" >
-<body class="start-btn-center" background="bg.jpg">
+<body class="start-btn-center">
  
 	<b><p id="Intro">Welcome To Artox, Hope You Find It Interesting</p></b>
 
