--- a/Main.html
+++ b/Main.html
@@ -5,7 +5,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou" rel="stylesheet">
 
-	<link rel="stylesheet" type="text/css" href="css/Style_Main.css">
+	<link rel="stylesheet" type="text/css" href="/css/Style_Main.css">
 
 	<img class="logo" src="D:\HTML\My_Website\Artox\images\Logo.jpg">
 	
