--- a/Main.html
+++ b/Main.html
@@ -7,7 +7,7 @@
 
 	<link rel="stylesheet" type="text/css" href="/css/Style_Main.css">
 
-	<img class="logo" src="D:\HTML\My_Website\Artox\images\Logo.jpg">
+	<img class="logo" src="/images/Logo.jpg">
 	
 	<ul>
 			<li><a href="D:\HTML\My_Website\Artox\Main.html">Home</a></li>
