--- a/Main.html
+++ b/Main.html
@@ -23,7 +23,7 @@
 
 <body>
 <div id="banner">
-	<img src="D:\HTML\My_Website\Artox\images\banner1.jpg">
+	<img src="/images/banner1.jpg">
 
 </div>
 
