--- a/Main.html
+++ b/Main.html
@@ -10,10 +10,10 @@
 	<img class="logo" src="/images/Logo.jpg">
 	
 	<ul>
-			<li><a href="D:\HTML\My_Website\Artox\Main.html">Home</a></li>
-			<li><a href="D:\HTML\My_Website\Artox\About.html">About</a></li>
-			<li><a href="D:\HTML\My_Website\Artox\samplelist.html">Web</a></li>
-			<li><a href="D:\HTML\My_Website\Artox\gallery_main.html">Gallery</a></li>
+			<li><a href="/Main.html">Home</a></li>
+			<li><a href="/About.html">About</a></li>
+			<li><a href="/samplelist.html">Web</a></li>
+			<li><a href="/gallery_main.html">Gallery</a></li>
 			
 			<li class="contact"><a href="https://artox.us20.list-manage.com/subscribe/post?u=b130986d76f28872427a460e9&amp;id=9b3d96951d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate">Contact</a></li>
 		</ul>
@@ -29,8 +29,8 @@
 
 
 <div>
-	<a href="D:\HTML\My_Website\Artox\samplelist.html"><img class="web" src="D:\HTML\My_Website\Artox\images\web.png"></a>
-	<a href="D:\HTML\My_Website\Artox\gallery_main.html"><img class="art" src="D:\HTML\My_Website\Artox\images\gal.jpg"></a>
+	<a href="/samplelist.html"><img class="web" src="/images/web.png"></a>
+	<a href="/gallery_main.html"><img class="art" src="/images/gal.jpg"></a>
 	
  </div>
 	
