--- a/About.html
+++ b/About.html
@@ -6,15 +6,15 @@
 
 <link href="https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou" rel="stylesheet">
 
-<link rel="stylesheet" type="text/css" href="css/Style_about.css">
+<link rel="stylesheet" type="text/css" href="/css/Style_about.css">
 <header>
-	<img class="logo" src="D:\HTML\My_Website\Artox\images\Logo.jpg">
+	<img class="logo" src="/images/Logo.jpg">
 
 	<ul>	
  		<li><a href="D:\HTML\My_Website\Artox\Main.html">Home</a></li>
-			<li><a href="D:\HTML\My_Website\Artox\About.html">About</a></li>
-			<li><a href="D:\HTML\My_Website\Artox\samplelist.html">Web</a></li>
-			<li><a href="D:\HTML\My_Website\Artox\gallery_main.html">Gallery</a></li>
+			<li><a href="/About.html">About</a></li>
+			<li><a href="/samplelist.html">Web</a></li>
+			<li><a href="/gallery_main.html">Gallery</a></li>
 			<li class="contact"><a href="https://artox.us20.list-manage.com/subscribe/post?u=b130986d76f28872427a460e9&amp;id=9b3d96951d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate">Contact</a></li>
 	</ul>
 </header>
@@ -26,10 +26,10 @@
 <body>
 
  <div>
- 	<img class="left" src="D:\HTML\My_Website\Artox\images\bannerleft.jpg">
+ 	<img class="left" src="/images/bannerleft.jpg">
 	
 	</div>
-	<img id="pic" src="D:\HTML\My_Website\Artox\images\gallery_content\potrait.jpg">
+	<img id="pic" src="/images/gallery_content/potrait.jpg">
 	<div class="abt">
 		<p>
 		   I am IT Engineer by Qualification and an Artist at heart. Learning new things is my Hobby. I also take interest in 3d art and Game development. 
@@ -39,6 +39,6 @@
 		   <h2>Artox</h2>Artox is my Portfolio Website where I will be Showcasing my Works both Web Development and 3d Art, and will be Updating it Regularly.
 	   </p>
 	 </div>
-	<img class="right" src="D:\HTML\My_Website\Artox\images\bannerright.jpg">
+	<img class="right" src="/images/bannerright.jpg">
 </body>
 </html>
