--- a/samplelist.html
+++ b/samplelist.html
@@ -5,17 +5,17 @@
 
 	<link href="https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou" rel="stylesheet">
 	
-	<link rel="stylesheet" type="text/css" href="css/Style_samples.css">
+	<link rel="stylesheet" type="text/css" href="/css/Style_samples.css">
 
 <header>
-	<img class="logo" src="D:\HTML\My_Website\Artox\images\Logo.jpg">
+	<img class="logo" src="/images/Logo.jpg">
 
     <nav>
 		<ul>
-			<li><a href="D:\HTML\My_Website\Artox\Main.html">Home</a></li>
-			<li><a href="D:\HTML\My_Website\Artox\About.html">About</a></li>
-			<li><a href="D:\HTML\My_Website\Artox\samplelist.html">Web</a></li>
-			<li><a href="D:\HTML\My_Website\Artox\gallery_main.html">Gallery</a></li>
+			<li><a href="/Main.html">Home</a></li>
+			<li><a href="/About.html">About</a></li>
+			<li><a href="/samplelist.html">Web</a></li>
+			<li><a href="/gallery_main.html">Gallery</a></li>
 			<li class="contact"><a href="https://artox.us20.list-manage.com/subscribe/post?u=b130986d76f28872427a460e9&amp;id=9b3d96951d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate">Contact</a></li>
 		</ul>
 	</nav>
@@ -25,27 +25,27 @@
 <div class="col col-sm-9 col-md-12 col-lg-12" >
 <body class="start-btn-center" >
 	<div>
-		<img class="right" src="D:\HTML\My_Website\Artox\images\smallbannerleft.jpg">
+		<img class="right" src="/images/smallbannerleft.jpg">
 
 	</div>
 	<p id="disc">Web Development Samples</p>
  	
  	<ul class="list">
- 		<li class="code"><a href="index.html">Website: Artox </a>
+ 		<li class="code"><a href="/index.html">Website: Artox </a>
 
 
- 			<a href="https://github.com/TSharma-84/BGGradient.github.io"><img class="git" src="D:\HTML\My_Website\Artox\images\git.png"></a>
+ 			<a href="https://github.com/TSharma-84/BGGradient.github.io"><img class="git" src="/images/git.png"></a>
  			<p class="synopsis">A complete website using HTML,CSS and Javascript</p>
  		</li>
 
  		<li id="grad"><a href="bg_change.html">Gradient Background</a>
  			
- 			<a href="https://github.com/TSharma-84/BGGradient.github.io"><img class="git" src="D:\HTML\My_Website\Artox\images\git.png"></a>
+ 			<a href="https://github.com/TSharma-84/BGGradient.github.io"><img class="git" src="/images/git.png"></a>
  			<p class="synopsis">A Javascript app sample where user can change Background Gradient Colors with selected Colors</p>
  		</li>
 
  		<li class="code"><a href="">Shopping List</a>
- 			<a href="https://github.com/TSharma-84/BGGradient.github.io"><img class="git" src="D:\HTML\My_Website\Artox\images\git.png"></a>
+ 			<a href="https://github.com/TSharma-84/BGGradient.github.io"><img class="git" src="/images/git.png"></a>
  			<p class="synopsis">A simple Shopping list where User can add and delete Items</p>
  		</li>
 
