--- a/gallery_main.html
+++ b/gallery_main.html
@@ -31,10 +31,10 @@
 				<img class="img" src="/images/gallery_content/alien.jpg">
 				<img class="img" src="/images/gallery_content/Demon.png">
 				<img class="img" src="/images/gallery_content/Final.jpg">
-				<img class="img"src="/images/gallery_content/giant.jpg">
+				<img class="img" src="/images/gallery_content/giant.jpg">
 				<img class="img" src="/images/gallery_content/Mammoth.jpg">
 				<img class="img" src="/images/gallery_content/Mustang.jpg">
-				<img class="img" src="/images/gallery_content/paleman.jpg">
+				<img class="img" src="/images/gallery_content/paleman.JPG">
 			<!-- 	<img class="imglrg" src="/images\gallery_content/pirate.jpg"> -->
 	</div>
 
