--- a/bg_change.html
+++ b/bg_change.html
@@ -3,7 +3,21 @@
 <head>
 	<title>Gradient Background</title>
 	<link rel="stylesheet" type="text/css" href="css/bg_style.css">
+	
+	<link href="https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou" rel="stylesheet">
+
+	<img class="logo" src="D:\HTML\My_Website\Artox\images\Logo.jpg">
+	
+	        <ul>
+			<li><a href="D:\HTML\My_Website\Artox\Main.html">Home</a></li>
+			<li><a href="D:\HTML\My_Website\Artox\About.html">About</a></li>
+			<li><a href="D:\HTML\My_Website\Artox\samplelist.html">Web</a></li>
+			<li><a href="D:\HTML\My_Website\Artox\gallery_main.html">Gallery</a></li>
+			
+			<li class="contact"><a href="https://artox.us20.list-manage.com/subscribe/post?u=b130986d76f28872427a460e9&amp;id=9b3d96951d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate">Contact</a></li>
+		</ul>
 </head>
+
 <body id="bod">
 	<h1 id="h1">BACKGROUND GENERATOR</h1>
 	<input class="color1" type="color" name="color1" value=#ff00ff>
