--- a/bg_change.html
+++ b/bg_change.html
@@ -7,13 +7,13 @@
 
 	<link rel="stylesheet" type="text/css" href="css/bg_style.css">
 
-	<img class="logo" src="D:\HTML\My_Website\Artox\images\Logo.jpg">
+	<img class="logo" src="/images/Logo.jpg">
 	
 	<ul>
-			<li><a href="D:\HTML\My_Website\Artox\Main.html">Home</a></li>
-			<li><a href="D:\HTML\My_Website\Artox\About.html">About</a></li>
-			<li><a href="D:\HTML\My_Website\Artox\samplelist.html">Web</a></li>
-			<li><a href="D:\HTML\My_Website\Artox\gallery_main.html">Gallery</a></li>
+			<li><a href="/Main.html">Home</a></li>
+			<li><a href="/About.html">About</a></li>
+			<li><a href="/samplelist.html">Web</a></li>
+			<li><a href="/gallery_main.html">Gallery</a></li>
 			<li class="contact"><a href="https://artox.us20.list-manage.com/subscribe/post?u=b130986d76f28872427a460e9&amp;id=9b3d96951d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate">Contact</a></li>
 		</ul>
 </head>
@@ -28,6 +28,6 @@
 
 	<input class="color2" type="color" name="color2" value=#00ff00>
 
-	<script type="text/javascript" src = "D:\HTML\My_Website\Artox\javascript\bg_script.js"></script>
+	<script type="text/javascript" src = "/javascript/bg_script.js"></script>
 </body>
 </html>
