--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCType HTML>
 <html>
 <head >
-	<title>Z-Artist</title>
+	<title>Artox</title>
 
 	<link href="https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou" rel="stylesheet">
 	
