--- a/About.html
+++ b/About.html
@@ -11,7 +11,9 @@
 	<img class="logo" src="/images/Logo.jpg">
 
 	<ul>	
- 		<li><a href="D:\HTML\My_Website\Artox\Main.html">Home</a></li>
+ 		
+			
+			<li><a href="/Main.html">Home</a></li>
 			<li><a href="/About.html">About</a></li>
 			<li><a href="/samplelist.html">Web</a></li>
 			<li><a href="/gallery_main.html">Gallery</a></li>
