--- a/samplelist.html
+++ b/samplelist.html
@@ -44,10 +44,10 @@
  			<p class="synopsis">A Javascript app sample where user can change Background Gradient Colors with selected Colors</p>
  		</li>
 
- 		<li class="code"><a href="">Shopping List</a>
+<!--  		<li class="code"><a href="">Shopping List</a>
  			<a href="https://github.com/TSharma-84/BGGradient.github.io"><img class="git" src="/images/git.png"></a>
  			<p class="synopsis">A simple Shopping list where User can add and delete Items</p>
- 		</li>
+ 		</li> -->
 
  	</ul>
 	</div>
