--- a/About.html
+++ b/About.html
@@ -34,7 +34,7 @@
 	<img id="pic" src="/images/gallery_content/potrait.jpg">
 	<div class="abt">
 		<p>
-		   I am IT Engineer by Qualification and an Artist at heart. Learning new things is my Hobby. I also take interest in 3d art and Game development. 
+		   I am an IT Engineer by Qualification and an Artist at heart. Learning new things is my Hobby. I also take interest in 3d art and Game development. 
 		   <br>
 		   <br>
 		   Having worked as Software Developer for over 6 years, i see Web development is a Natural fit for my Skill sets, Where I can use both My Experiences as developer and Artist.  
