--- a/samplelist.html
+++ b/samplelist.html
@@ -47,7 +47,7 @@
 <!--  		<li class="code"><a href="/index.html">React Sample App </a>
 
 
- 			<a href="https://github.com/TSharma-84/React_robofrnds"><img class="git" src="/images/git.png"></a>
+ 			<a href="https://github.com/TSharma-84/React_robofrnds/blob/gh-pages/index.html"><img class="git" src="/images/git.png"></a>
  			<p class="synopsis">Sample React App</p>
  		</li>
 
