--- a/samplelist.html
+++ b/samplelist.html
@@ -44,10 +44,10 @@
  			<p class="synopsis">A Javascript app sample where user can change Background Gradient Colors with selected Colors</p>
  		</li>
 
-<!--  		<li class="code"><a href="/index.html">React Sample App </a>
+<!--  		<li><a href="https://github.com/TSharma-84/React_robofrnds/index.html">React Sample App </a>
 
 
- 			<a href="https://github.com/TSharma-84/React_robofrnds/blob/gh-pages/index.html"><img class="git" src="/images/git.png"></a>
+ 			<a href="https://github.com/TSharma-84/React_robofrnds"><img class="git" src="/images/git.png"></a>
  			<p class="synopsis">Sample React App</p>
  		</li>
 
