--- a/samplelist.html
+++ b/samplelist.html
@@ -44,10 +44,10 @@
  			<p class="synopsis">A Javascript app sample where user can change Background Gradient Colors with selected Colors</p>
  		</li>
 
-		<li id="grad"><a href="https://github.com/TSharma-84/React_robofrnds/blob/gh-pages/index.html">React Sample App </a>
+		<li id="grad"><a href="https://github.com/TSharma-84/React_robofrnds">React Sample App </a>
 
 
- 			<a href="https://github.com/TSharma-84/React_robofrnds/"><img class="git" src="/images/git.png"></a>
+ 			<a href="https://github.com/TSharma-84/React_robofrnds"><img class="git" src="/images/git.png"></a>
  			<p class="synopsis">A Simple React App with Robo Freind Cards and A basic Search Box</p>
  		</li>
 
