--- a/samplelist.html
+++ b/samplelist.html
@@ -44,7 +44,7 @@
  			<p class="synopsis">A Javascript app sample where user can change Background Gradient Colors with selected Colors</p>
  		</li>
 
-		<li id="grad"><a href="https://github.com/TSharma-84/React_robofrnds">React Sample App </a>
+		<li id="grad"><a href="https://tsharma-84.github.io/React_robofriends/">React Sample App </a>
 
 
  			<a href="https://github.com/TSharma-84/React_robofrnds"><img class="git" src="/images/git.png"></a>
