--- a/About.html
+++ b/About.html
@@ -6,17 +6,15 @@
 
 <link href="https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou" rel="stylesheet">
 
-<link rel="stylesheet" type="text/css" href="/css/Style_about.css">
+<link rel="stylesheet" type="text/css" href="css/Style_about.css">
 <header>
-	<img class="logo" src="/images/Logo.jpg">
+	<img class="logo" src="D:\HTML\My_Website\Artox\images\Logo.jpg">
 
 	<ul>	
- 		
-			
-			<li><a href="/Main.html">Home</a></li>
-			<li><a href="/About.html">About</a></li>
-			<li><a href="/samplelist.html">Web</a></li>
-			<li><a href="/gallery_main.html">Gallery</a></li>
+ 		<li><a href="D:\HTML\My_Website\Artox\Main.html">Home</a></li>
+			<li><a href="D:\HTML\My_Website\Artox\About.html">About</a></li>
+			<li><a href="D:\HTML\My_Website\Artox\samplelist.html">Web</a></li>
+			<li><a href="D:\HTML\My_Website\Artox\gallery_main.html">Gallery</a></li>
 			<li class="contact"><a href="https://artox.us20.list-manage.com/subscribe/post?u=b130986d76f28872427a460e9&amp;id=9b3d96951d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate">Contact</a></li>
 	</ul>
 </header>
@@ -28,19 +26,22 @@
 <body>
 
  <div>
- 	<img class="left" src="/images/bannerleft.jpg">
+ 	<img class="left" src="D:\HTML\My_Website\Artox\images\bannerleft.jpg">
 	
 	</div>
-	<img id="pic" src="/images/gallery_content/potrait.jpg">
+	<img id="pic" src="D:\HTML\My_Website\Artox\images\gallery_content\potrait.jpg">
 	<div class="abt">
 		<p>
-		   I am an IT Engineer by Qualification and an Artist at heart. Learning new things is my Hobby. I also take interest in 3d art and Game development. 
-		   <br>
-		   <br>
-		   Having worked as Software Developer for over 6 years, i see Web development is a Natural fit for my Skill sets, Where I can use both My Experiences as developer and Artist.  
-		   <h2>Artox</h2>Artox is my Portfolio Website where I will be Showcasing my Works both Web Development and 3d Art, and will be Updating it Regularly.
+		   I am IT Engineer by Qualification and an Artist by heart. I am always seen as Autodidact who keeps on learning new things by his own. I am also inclined towards 3d Art and Game Development. 
+
+		   Having worked as a Software Developer for over 6 years, Web Development is a natural fit for my skill sets, wherein I can use my dual experience of being Developer and Artist.
+
+           <h2>Artox</h2> Artox is my Portfolio Website where I will be showcasing all my works in – Web Development and 3d Art. I will keep on updating it regularly with my latest Works.
+
+		   <b>Next Update – Coming Soon………</b>
+
 	   </p>
 	 </div>
-	<img class="right" src="/images/bannerright.jpg">
+	<img class="right" src="D:\HTML\My_Website\Artox\images\bannerright.jpg">
 </body>
 </html>
