--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
  
 	<b><p id="Intro">Welcome To Artox, Hope You Find It Interesting</p></b>
 
-	<div class="clear"><input class="btn btn-primary" type="submit" value="Enter Here" onclick="openWin()" id="mc-embedded-subscribe" class="button"></div>	  
+	<div class="text-center"><a href="D:\HTML\My_Website\Artox\Main.html">
+    <input type="button" class="btn btn-primary center-block" value="ENTER" style="width:100px;"></a>
 	</div>
 
 
