--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
  
 	<b><p id="Intro">Welcome To Artox, Hope You Find It Interesting</p></b>
 
-	<div class="text-center"><a href="D:\HTML\My_Website\Artox\Main.html">
+	<div class="text-center"><a href="/Main.html">
     <input type="button" class="btn btn-primary center-block" value="ENTER" style="width:100px;"></a>
 	</div>
 
