--- a/About.html
+++ b/About.html
@@ -8,13 +8,13 @@
 
 <link rel="stylesheet" type="text/css" href="css/Style_about.css">
 <header>
-	<img class="logo" src="D:\HTML\My_Website\Artox\images\Logo.jpg">
+	<img class="logo" src="/images/Logo.jpg">
 
 	<ul>	
  		<li><a href="D:\HTML\My_Website\Artox\Main.html">Home</a></li>
-			<li><a href="D:\HTML\My_Website\Artox\About.html">About</a></li>
-			<li><a href="D:\HTML\My_Website\Artox\samplelist.html">Web</a></li>
-			<li><a href="D:\HTML\My_Website\Artox\gallery_main.html">Gallery</a></li>
+			<li><a href="/About.html">About</a></li>
+			<li><a href="/samplelist.html">Web</a></li>
+			<li><a href="/gallery_main.html">Gallery</a></li>
 			<li class="contact"><a href="https://artox.us20.list-manage.com/subscribe/post?u=b130986d76f28872427a460e9&amp;id=9b3d96951d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate">Contact</a></li>
 	</ul>
 </header>
@@ -42,6 +42,6 @@
 
 	   </p>
 	 </div>
-	<img class="right" src="D:\HTML\My_Website\Artox\images\bannerright.jpg">
+	<img class="right" src="/images/bannerright.jpg">
 </body>
 </html>
