--- a/About.html
+++ b/About.html
@@ -29,7 +29,7 @@
  	<img class="left" src="D:\HTML\My_Website\Artox\images\bannerleft.jpg">
 	
 	</div>
-	<img id="pic" src="D:\HTML\My_Website\Artox\images\gallery_content\potrait.jpg">
+	<img id="pic" src="/gallery_content/potrait.jpg">
 	<div class="abt">
 		<p>
 		   I am IT Engineer by Qualification and an Artist by heart. I am always seen as Autodidact who keeps on learning new things by his own. I am also inclined towards 3d Art and Game Development. 
