--- a/About.html
+++ b/About.html
@@ -26,7 +26,7 @@
 <body>
 
  <div>
- 	<img class="left" src="D:\HTML\My_Website\Artox\images\bannerleft.jpg">
+ 	<img class="left" src="/images/bannerleft.jpg">
 	
 	</div>
 	<img id="pic" src="/gallery_content/potrait.jpg">
