--- a/About.html
+++ b/About.html
@@ -34,11 +34,11 @@
 		<p>
 		   I am IT Engineer by Qualification and an Artist by heart. I am always seen as Autodidact who keeps on learning new things by his own. I am also inclined towards 3d Art and Game Development. 
 
-		   Having worked as a Software Developer for over 6 years, Web Development is a natural fit for my skill sets, wherein I can use my dual experience of being Developer and Artist.
+		   <br>Having worked as a Software Developer for over 6 years, Web Development is a natural fit for my skill sets, wherein I can use my dual experience of being Developer and Artist.</br>
 
            <h2>Artox</h2> Artox is my Portfolio Website where I will be showcasing all my works in – Web Development and 3d Art. I will keep on updating it regularly with my latest Works.
-
-		   <b>Next Update – Coming Soon………</b>
+	
+		<br> <b>Next Update – Coming Soon………</b></br>
 
 	   </p>
 	 </div>
