--- a/About.html
+++ b/About.html
@@ -32,11 +32,11 @@
 	<img id="pic" src="/images/gallery_content/potrait.jpg">
 	<div class="abt">
 		<p>
-		   I am IT Engineer by Qualification and an Artist by heart. I am always seen as Autodidact who keeps on learning new things by his own. I am also inclined towards 3d Art and Game Development. 
+		   I am IT Engineer by qualification and an artist by heart. I am always seen as Autodidact who keeps on learning new things by his own. I am also inclined towards 3d Art and Game Development. 
 
 		   <br>Having worked as a Software Developer for over 6 years, Web Development is a natural fit for my skill sets, wherein I can use my dual experience of being Developer and Artist.</br>
 
-           <h2>Artox</h2> Artox is my Portfolio Website where I will be showcasing all my works in – Web Development and 3d Art. I will keep on updating it regularly with my latest Works.
+           <h2>Artox</h2> Artox is my Portfolio Website where I will be showcasing all my work in – Web Development and 3d Art. I will keep on updating it regularly with my latest Works.
 	
 		<br> <b>Next Update – Coming Soon………</b></br>
 
