--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-	<link rel="stylesheet" type="text/css" href="/css/Style_Index.css">
+	<link rel="stylesheet" type="text/css" href="\css\Style_Index.css">
 
 	<script>
 	function openWin() {
@@ -22,7 +22,7 @@
  
 	<b><p id="Intro">Welcome To Artox, Hope You Find It Interesting</p></b>
 
-	<div class="text-center"><a href="/Main.html">
+	<div class="text-center"><a href="\Main.html">
     <input type="button" class="btn btn-primary center-block" value="ENTER" style="width:100px;"></a>
 	</div>
 
