--- a/Main.html
+++ b/Main.html
@@ -5,15 +5,15 @@
 
 	<link href="https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou" rel="stylesheet">
 
-	<link rel="stylesheet" type="text/css" href="/css/Style_Main.css">
+	<link rel="stylesheet" type="text/css" href="\css\Style_Main.css">
 
-	<img class="logo" src="/images/Logo.jpg">
+	<img class="logo" src="\images\Logo.jpg">
 	
 	<ul>
-			<li><a href="/Main.html">Home</a></li>
-			<li><a href="/About.html">About</a></li>
-			<li><a href="/samplelist.html">Web</a></li>
-			<li><a href="/gallery_main.html">Gallery</a></li>
+			<li><a href="\Main.html">Home</a></li>
+			<li><a href="\About.html">About</a></li>
+			<li><a href="\samplelist.html">Web</a></li>
+			<li><a href="\gallery_main.html">Gallery</a></li>
 			
 			<li class="contact"><a href="https://artox.us20.list-manage.com/subscribe/post?u=b130986d76f28872427a460e9&amp;id=9b3d96951d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate">Contact</a></li>
 		</ul>
@@ -23,14 +23,14 @@
 
 <body>
 <div id="banner">
-	<img src="/images/banner1.jpg">
+	<img src="\images\banner1.jpg">
 
 </div>
 
 
 <div>
-	<a href="/samplelist.html"><img class="web" src="/images/web.png"></a>
-	<a href="/gallery_main.html"><img class="art" src="/images/gal.jpg"></a>
+	<a href="\samplelist.html"><img class="web" src="/images/web.png"></a>
+	<a href="\gallery_main.html"><img class="art" src="/images/gal.jpg"></a>
 	
  </div>
 	
