--- a/gallery_main.html
+++ b/gallery_main.html
@@ -35,8 +35,7 @@
 				<img class="img" src="/images/gallery_content/mammoth.jpg">
 				<img class="img" src="/images/gallery_content/Mustang.jpg">
 				<img class="img" src="/images/gallery_content/paleman.JPG">
-			<!-- 	<img class="imglrg" src="/images\gallery_content/pirate.jpg"> -->
-	</div>
+				<img class="imglrg" src="/images\gallery_content/pirate.jpg"> 
 
 	<div>
 		<img id="main_image" src="/images/gallery_content/orc.jpg" >
@@ -55,3 +54,4 @@
 	
 </footer>
 </html>
+
