--- a/gallery_main.html
+++ b/gallery_main.html
@@ -35,11 +35,11 @@
 				<img class="img" src="/images/gallery_content/mammoth.jpg">
 				<img class="img" src="/images/gallery_content/Mustang.jpg">
 				<img class="img" src="/images/gallery_content/paleman.JPG">
-				<img class="imglrg" src="/images\gallery_content/pirate.jpg">
-				<img class="img src="/images\gallery_content/oldman.jpg">
-		                <img class="img" src="/images\gallery_content/boy.jpg">
-				<img class="img" src="/images\gallery_content/girl.jpg">
-				<img class="img" src="/images\gallery_content/pikachu.jpg>
+				<img class="imglrg" src="/images/gallery_content/pirate.jpg">
+				<img class="img src="/images/gallery_content/oldman.jpg">
+		                <img class="img" src="/images/gallery_content/boy.jpg">
+				<img class="img" src="/images/gallery_content/girl.jpg">
+				<img class="img" src="/images/gallery_content/pikachu.jpg>
 				
 
 	<div>
