--- a/gallery_main.html
+++ b/gallery_main.html
@@ -26,7 +26,8 @@
 <body>
 
 	
-	<div id="images" onclick="changeimage(event)">			
+	<div id="images" onclick="changeimage(event)">
+		                <img class="img" src="/images/gallery_content/zombie.jpg">
 				<img class="img" src="/images/gallery_content/orc.jpg">
 				<img class="img" src="/images/gallery_content/alien.jpg">
 				<img class="img" src="/images/gallery_content/Demon.png">
