--- a/gallery_main.html
+++ b/gallery_main.html
@@ -28,6 +28,7 @@
 	
 	<div id="images" onclick="changeimage(event)">
 		                <img class="img" src="/images/gallery_content/zombie.jpg">
+				<img class="img" src="/images/gallery_content/frankenstein.jpg">
 				<img class="img" src="/images/gallery_content/orc.jpg">
 				<img class="img" src="/images/gallery_content/alien.jpg">
 				<img class="img" src="/images/gallery_content/Demon.png">
